--- a/fronted-vue/public/index.html
+++ b/fronted-vue/public/index.html
@@ -9,6 +9,21 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
     />
+    <!-- En tu archivo index.html o en la cabecera de tu archivo principal -->
+
+
+    <!-- Estilos de DataTables -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css"
+    />
+    <!-- Si usas Bootstrap -->
+
+    <!-- Opcional para Bootstrap -->
 
     <link
       rel="stylesheet"
