--- a/fronted-vue/public/index.html
+++ b/fronted-vue/public/index.html
@@ -30,7 +30,7 @@
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>IndiEC</title>
   </head>
   <body>
     <noscript>
